FIX - small fix for desktop form items showing on mobile

--- a/styles/components/_consultationform.scss
+++ b/styles/components/_consultationform.scss
@@ -116,6 +116,10 @@
 		max-width: 960px;
 		margin: 0 auto;
 	}
+
+	.vertical {
+		display: none;
+	}
 }
 
 
@@ -163,6 +167,7 @@
 
 
 		.vertical {
+			display: block;
 			width: 518px;
 			position: relative;
 			text-align: center;
